2012-02-10  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c, avatar-audio:
	use size_t where appropriete (ABI change!)
	pascal/akfavatar.pas: adapted

2012-01-31  Andreas K. Foerster  <info@akfoerster.de>

	* avtmsg.c, avtgrmsg.c, mingw/avtmsg.c: removed
	all callers adapted

	* example.c: simplified

2012-01-28  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_load_au): code cleanup

2012-01-06  Andreas K. Foerster  <info@akfoerster.de>

	* Homepage.desktop: new file

2012-01-05  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-audio.c (avt_load_audio_part): new function
	avatar-audio.c (avt_LoadAU_RW, avt_load_audio_RW)
	(avt_load_audio_stream, avt_load_audio_data): adapted
	lua/lua-avt.c (lavt_load_audio_stream): adapted

	* akfavatar.h:
	avt_image_t renamed to avt_image
	avt_audio_t renamed to avt_audio
	all c-code adapted

	* avtaddons.h: avt_filter_t renamed to avt_filter
	all c-code adapted

2012-01-04  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_LoadAU_RW): restore file position on error

2012-01-03  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/questionary.lua: rewritten
	  lua/fs-quiz-de.lua, lua/fs-quiz-en.lua: adapted
	  lua/akfavatar/Fragebogen.lua: removed

2012-01-02  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c: add more error messages

2012-01-01  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/ar.lua: ar:dolua() replaced with ar:loadlua()

	* avtaddons.h, avtvorbis.c (avta_load_vorbis_stream): new function
	(avta_load_vorbis_file): adapted

	* lua/akfavatar-vorbis.c (lvorbis_load_stream, make_audio_element):
	new functions

	* lua/lua-avt.c (lavt_load_audio_stream): new function

	* lua/akfavatar-vorbis.c (lvorbis_load_stream_chain):
	new function

	* lua/akfavatar/avtdemo.lua (load_audio):
	load directly from stream, if audio comes from an archive

2011-12-29  Andreas K. Foerster  <info@akfoerster.de>
